--- a/package.json
+++ b/package.json
@@ -43,16 +43,21 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@prettier/plugin-xml": "^3.4.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.10",
     "@types/ramda": "^0.30.2",
     "cspell": "^9.1.3",
     "eslint": "^9.30.1",
+    "jest": "^30.0.4",
     "jxa-types": "^0.0.5",
     "markdownlint-cli2": "^0.18.1",
     "prettier": "^3.6.2",
     "prettier-plugin-ini": "^1.3.0",
     "prettier-plugin-sort-json": "^4.1.1",
     "prettier-plugin-toml": "^2.0.5",
+    "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0",
     "webpack": "^5.99.9",
@@ -115,7 +120,8 @@
     "check-formatting": "yarn prettier -c . && yarn markdownlint-cli2 '**/*.md' '#node_modules'",
     "check-spelling": "yarn cspell --no-progress './**/*'  './**/.*'",
     "format": "prettier -w . && yarn markdownlint-cli2 --fix '**/*.md' '#node_modules'",
-    "qa": "yarn eslint && yarn check-spelling && yarn check-formatting"
+    "qa": "yarn eslint && yarn check-spelling && yarn check-formatting",
+    "test": "jest"
   },
   "version": "0.0.1"
 }
