--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,14 +7,8 @@ jobs:
         run: 'yarn'
       - name: 'Tests'
         run: 'yarn jest --coverage'
-      - env:
-          COVERALLS_GIT_BRANCH: '${{github.ref_name}}'
-          COVERALLS_SERVICE_JOB_ID: ${{github.run_id}}
-          COVERALLS_SERVICE_JOB_NUMBER: ${{github.run_number}}
-          COVERALLS_SERVICE_NAME: 'CI-pipeline'
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-        name: 'Submit coverage'
-        run: 'yarn coveralls < coverage/lcov.info'
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
 name: 'Tests'
 'on':
   pull_request:
