--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: 'check-case-conflict'
       - id: 'check-executables-have-shebangs'
       - id: 'check-merge-conflict'
-      - exclude: 'src/.*.ts$'
+      - exclude: "src/index\\.ts$"
         id: 'check-shebang-scripts-are-executable'
       - id: 'check-symlinks'
       - id: 'check-toml'
