--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
   "description": "jxa-lib examples.",
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@prettier/plugin-xml": "^3.4.1",
+    "@prettier/plugin-xml": "^3.4.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.10",
     "@types/ramda": "^0.30.2",
     "cspell": "^9.1.3",
     "eslint": "^9.30.1",
     "jest": "^30.0.4",
-    "jxa-types": "^0.0.5",
+    "jxa-types": "^0.0.6",
     "markdownlint-cli2": "^0.18.1",
     "prettier": "^3.6.2",
     "prettier-plugin-ini": "^1.3.0",
@@ -65,6 +65,7 @@
     "webpack-shebang-plugin": "^1.1.8",
     "yarn-audit-fix": "^10.1.1"
   },
+  "files": ["LICENSE.txt", "README.md", "dist/index.js", "dist/index.js.map"],
   "homepage": "https://tatsh.github.io/jxa-lib-examples/",
   "keywords": ["applescript", "jxa", "macos", "typescript"],
   "license": "MIT",
@@ -93,12 +94,6 @@
         "files": ["package.json"],
         "options": {
           "parser": "json"
-        }
-      },
-      {
-        "files": ["*.ts", "*.tsx"],
-        "options": {
-          "parser": "typescript"
         }
       }
     ],
