--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "baseUrl": "src",
     "disableReferencedProjectLoad": true,
@@ -11,10 +10,8 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
     "lib": ["es2018"],
     "module": "commonjs",
-    "moduleResolution": "node",
     "newLine": "LF",
     "noEmitOnError": true,
     "noErrorTruncation": true,
@@ -29,6 +26,7 @@
     "pretty": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "sourceMap": true,
     "strict": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": false,
