--- a/package.json
+++ b/package.json
@@ -35,10 +35,6 @@
     ],
     "useGitignore": true
   },
-  "dependencies": {
-    "jxa-lib": "^0.1.7",
-    "ramda": "^0.31.3"
-  },
   "description": "jxa-lib examples.",
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -49,12 +45,14 @@
     "cspell": "^9.1.3",
     "eslint": "^9.30.1",
     "jest": "^30.0.4",
+    "jxa-lib": "^0.1.7",
     "jxa-types": "^0.0.6",
     "markdownlint-cli2": "^0.18.1",
     "prettier": "^3.6.2",
     "prettier-plugin-ini": "^1.3.0",
     "prettier-plugin-sort-json": "^4.1.1",
     "prettier-plugin-toml": "^2.0.5",
+    "ramda": "^0.31.3",
     "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
