--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/node": "^24.5.2",
     "@types/ramda": "^0.31.1",
     "cspell": "^9.2.1",
-    "eslint": "^9.35.0",
+    "eslint": "^9.36.0",
     "jest": "^30.1.3",
     "jxa-lib": "^0.1.7",
     "jxa-types": "^0.0.6",
@@ -56,6 +56,7 @@
     "ts-jest": "^29.4.4",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.28.13",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1",
     "webpack": "^5.101.3",
@@ -66,9 +67,9 @@
   "files": [
     "LICENSE.txt",
     "README.md",
+    "man/jxa-lib-examples.1",
     "dist/index.js",
-    "dist/index.js.map",
-    "man/jxa-lib-examples.1"
+    "dist/index.js.map"
   ],
   "homepage": "https://tatsh.github.io/jxa-lib-examples/",
   "keywords": ["applescript", "jxa", "macos", "typescript"],
@@ -88,7 +89,7 @@
     }
   },
   "name": "@tatsh/jxa-lib-examples",
-  "packageManager": "yarn@4.9.2",
+  "packageManager": "yarn@4.10.2",
   "prettier": {
     "endOfLine": "lf",
     "iniSpaceAroundEquals": true,
