--- a/package.json
+++ b/package.json
@@ -53,16 +53,15 @@
     "prettier-plugin-sort-json": "^4.1.1",
     "prettier-plugin-toml": "^2.0.6",
     "ramda": "^0.32.0",
-    "ts-jest": "^29.4.5",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "typedoc": "^0.28.15",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.47.0",
+    "typescript-eslint": "^8.48.0",
     "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1",
-    "webpack-shebang-plugin": "^1.1.8",
-    "yarn-audit-fix": "^10.1.1"
+    "webpack-shebang-plugin": "^1.1.8"
   },
   "files": [
     "LICENSE.txt",
@@ -89,7 +88,7 @@
     }
   },
   "name": "@tatsh/jxa-lib-examples",
-  "packageManager": "yarn@4.10.3",
+  "packageManager": "yarn@4.12.0",
   "prettier": {
     "endOfLine": "lf",
     "iniSpaceAroundEquals": true,
