--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "@eslint/js": "^9.39.2",
     "@prettier/plugin-xml": "^3.4.2",
     "@types/jest": "^30.0.0",
-    "@types/node": "^25.0.2",
+    "@types/node": "^25.0.3",
     "@types/ramda": "^0.31.1",
     "cspell": "^9.4.0",
     "eslint": "^9.39.2",
     "jest": "^30.2.0",
     "jxa-lib": "^0.1.9",
-    "jxa-types": "^0.0.6",
+    "jxa-types": "^0.0.8",
     "markdownlint-cli2": "^0.20.0",
     "prettier": "^3.7.4",
     "prettier-plugin-ini": "^1.3.0",
@@ -59,7 +59,7 @@
     "typedoc": "^0.28.15",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0",
-    "webpack": "^5.103.0",
+    "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1",
     "webpack-shebang-plugin": "^1.1.8"
   },
@@ -76,6 +76,9 @@
   "main": "dist/index.js",
   "markdownlint-cli2": {
     "config": {
+      "MD024": {
+        "siblings_only": true
+      },
       "MD033": {
         "allowed_elements": ["kbd"]
       },
