--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/ramda": "^0.31.1",
     "cspell": "^9.6.4",
     "eslint": "^10.0.0",
+    "globals": "^17.3.0",
     "jest": "^30.2.0",
     "jxa-lib": "^0.1.9",
     "jxa-types": "^0.0.8",
